# ut-rag

./: .env.example  .gitattributes  .gitignore  README.md  app.py  asdrequirements.txt  chatbot_ut.py  docker-compose.yml  dockerfile  environment.yml  forbidden_subdomains.txt  main.py  nlp_cs_ut_ee_links.txt  pyproject.toml  rag.py  requirements.txt  scraper.py  subdomains.txt  subdomains2.txt  subdomains_WhoisXMLAPI.json  vectors.py
.streamlit/: .secrets.toml.example  config.toml
chroma_db/: chroma.sqlite3
crawler/: items.py  middlewares.py  pipelines.py  settings.py
docs/: adr.ut.ee__page_pub_list_dynobj_desktop_57835_tid_70993_data_only_true_search_Otsi_field_100193_search_type_ANY_field_100193_text_search_value__C3_B5ppimine.html  adr.ut.ee__page_pub_list_dynobj_desktop_57835_tid_70993_data_only_true_search_Otsi_field_100193_search_type_ANY_field_100193_text_search_value__C3_B5ppimine.txt  ajakiri.ut.ee.html  ajakiri.ut.ee_.html  ajakiri.ut.ee_.txt  ajalugu-arheoloogia.ut.ee.html  ajalugu-arheoloogia.ut.ee.txt  biomeditsiin.ut.ee.html  biomeditsiin.ut.ee.txt  chem.ut.ee.html  chem.ut.ee.txt  cs.ut.ee.html  cs.ut.ee.txt  eik.ut.ee.html  eoppija.ut.ee_.html  eoppija.ut.ee_.txt  farmaatsia.ut.ee.html  farmaatsia.ut.ee.txt  fi.ut.ee.html  fi.ut.ee.txt  filsem.ut.ee.html  filsem.ut.ee.txt  futulab.ut.ee_ettevottele_.html  futulab.ut.ee_ettevottele_.txt  genoomika.ut.ee.html  genoomika.ut.ee.txt  hambaarstiteadus.ut.ee.html  hambaarstiteadus.ut.ee.txt  haridus.ut.ee.html  haridus.ut.ee.txt  humanitaarteadused.ut.ee.html  humanitaarteadused.ut.ee.txt  it.ut.ee_.html  (+251 more)
(+4402 files in other folders)
